--- a/index.html
+++ b/index.html
@@ -11,7 +11,20 @@
     <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap" rel="stylesheet">
 
     <script src="https://kit.fontawesome.com/8db91d1e06.js" crossorigin="anonymous"></script>
+
     <script src="https://cdn.tailwindcss.com"></script>
+    <script>
+        tailwind.config = {
+            theme: {
+                extend: {
+                    colors: {
+                        clifford: '#da373d',
+                    }
+                }
+            }
+        }
+    </script>
+
     <style>
         .manrope-font {
             font-family: "Manrope", sans-serif;
@@ -21,6 +34,50 @@
 
 <body>
 
+    <!-- main content -->
+    <main class="max-w-screen-xl mx-auto px-16 lg:px-28 manrope-font">
+
+        <!-- header section -->
+        <header class="flex pt-10 mb-20 flex-col gap-6 md:flex-row lg:flex-row ">
+            <!-- text content -->
+            <div>
+                <h1 class="text-5xl md:text-7xl font-bold">It's good <br>
+                    tea time at The<br>
+                    Tea House</h1>
+                <p class="text-gray-500 w-3/4 py-7">
+                    Tea and Botanical Solutions Supplier Give Optimum Satisfaction To Your Taste Buds.
+                </p>
+                <button class="bg-gradient-to-r from-[#FF0000] to-[#FF8938] px-5 py-3 rounded-lg text-white font-bold">
+                    Explore More
+                    <i class="fa-solid fa-arrow-right -rotate-45 text-xl"></i></button>
+
+
+
+            </div>
+
+            <!-- image content -->
+            <div class="relative">
+                <!-- image -->
+                <div class= "">
+                    <img class="w-full md:w-full md:h-full" src="./images/banner.png" alt="">
+                </div>
+                <!-- card -->
+                <div
+                    class="absolute flex justify-center items-center bg-white shadow-lg px-2 py-2 md:px-10 lg:py-4 rounded-lg top-28 md:top-80 md:left-16 lg:left-16">
+                    <!-- icon -->
+                    <div>
+                        <i class="fa-solid fa-star text-amber-500 text-2xl"></i>
+                    </div>
+                    <!-- text -->
+                    <div class="ml-2">
+                        <h2 class="lg:text-2xl font-bold">5.00</h2>
+                        <p class="text-gray-500 text-sm">Trust Pilot Ratings</p>
+                    </div>
+                </div>
+            </div>
+        </header>
+
+    </main>
 </body>
 
 </html>
